--- a/package.json
+++ b/package.json
@@ -15,19 +15,27 @@
     "@react-native-firebase/auth": "^21.6.1",
     "@react-native-firebase/database": "^21.6.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
-    "expo": "^52.0.17",
+    "@xmldom/xmldom": "^0.9.6",
+    "expo": "^52.0.18",
+    "expo-auth-session": "~6.0.0",
     "expo-build-properties": "~0.13.1",
     "expo-status-bar": "~2.0.0",
-    "expo-web-browser": "~14.0.1",
+    "expo-web-browser": "~14.0.0",
     "firebase": "^11.1.0",
+    "glob": "^7.2.0",
     "lucide-react-native": "^0.330.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "^0.76.5",
     "react-native-fbsdk-next": "^13.3.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-web": "~0.19.13",
-    "expo-auth-session": "~6.0.1"
+    "rimraf": "^3.0.2"
+  },
+  "overrides": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "@babel/plugin-transform-nullish-coalescing-operator",
+    "@babel/plugin-proposal-class-properties": "@babel/plugin-transform-class-properties",
+    "@babel/plugin-proposal-optional-chaining": "@babel/plugin-transform-optional-chaining"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
